--- a/digital-art-gallery/src/App.css
+++ b/digital-art-gallery/src/App.css
@@ -43,3 +43,14 @@ textarea {
   height: 100px;
   resize: vertical;
 }
+
+.search-input {
+  padding: 10px;
+  margin-left: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  font-size: 16px;
+  width: 200px;
+  max-width: 300px;
+  box-sizing: border-box;
+}
