--- a/digital-art-gallery/src/components/ImageUpload.css
+++ b/digital-art-gallery/src/components/ImageUpload.css
@@ -41,3 +41,13 @@
 .input-description {
   font-size: 14px;
 }
+
+.input-category {
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #ddd;
+  width: 100%;
+  max-width: 400px;
+  font-size: 16px;
+}
